src/objects/Truckers_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Relationship Account Holder</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Truckers Relationships</relationshipLabel>
        <relationshipName>Truckers_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFJ_Mktg_Fee__c</fullName>
        <description>enter this IF a fleet has multiple billing cards but not all are denied nor all eligible for marketing fee.</description>
        <inlineHelpText>enter this IF a fleet has multiple billing cards but not all are denied nor all eligible for marketing fee.</inlineHelpText>
        <label>PFJ Mktg Fee?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M12</fullName>
                </value>
                <value>
                    <fullName>M24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The partner to the primary account.</description>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Truckers Relationships (Partner)</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pilot_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pilot Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pilot_Denied__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pilot Denied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RelationshipID__c</fullName>
        <description>This is for syncing purposes only. Do not put a value in here.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is for syncing purposes only. Do not put a value in here.</inlineHelpText>
        <label>RelationshipID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TB2B Member ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_type_value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship_type_value</label>
        <length>75</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Send_to_Pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_TA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to TA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TA_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TA Approved?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TA_Denied__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TA Denied?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value of the relationship.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comdata Account Number, Pilot Location Key, etc</inlineHelpText>
        <label>Value</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>